[package]
name = "cs2_buttplug"
version = "0.5.0"
authors = ["gloss-click", "hornycactus <me@cactus.sexy>"]
edition = "2018"
description = "Buttplug.io mod for CS2"
readme = "README.md"
homepage = "https://github.com/gloss-click/cs2-buttplug"
repository = "https://github.com/gloss-click/cs2-buttplug"
license-file = "LICENSE.md"
publish = false

[lib]
name = "cs2_buttplug"
path = "src/lib.rs"

[[bin]]
name = "cs2_buttplug_cli"
path = "src/cli/main.rs"

[[bin]]
name = "cs2_buttplug_ui"
path = "src/ui/main.rs"

[dependencies]
buttplug = "7.1.11"
csgo-gsi = { features = ["rhai"], path = 'deps/csgo-gsi' }
rhai = { version = "0.18.3", features = ["sync"] }
futures = "0.3.30"
toml = "0.8.8"
serde = { version = "1.0.195", features = ["derive"] }
anyhow = "1.0.79"
fehler = "1.0.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
log = "0.4.20"
pretty_env_logger = "0.4.0"
git-transport = { version = "0.2.1", features = ["http-client-curl"] }
semver = "0.10.0"
socket2 = "0.3.16"
eframe = { version = "0.25.0", features = ["persistence"] }
rfd = "0.13.0"